trabajndo en la automatizacion de la carga

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # My Folders
 images/
 result/
+assets/recovery_phrase.txt
+assets/password.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
